--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head> 
+<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> <strong> ENGUERRA, AARON C. </strong></title>
+
   <style>
     .bottom-left {
       position: fixed;
