--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title> <strong> ENGUERRA, AARON C. </strong></title>
 
   <style>
+      img {
+      max-width: 100%;
+      height: auto;
+    }
+
     .bottom-left {
       position: fixed;
       bottom: 10px;
@@ -46,9 +51,13 @@
   font-size: 12px;
   box-shadow: 0 1px 2px rgba(140, 82, 255, 0.10);
 }
-</style>
-  
-    
+
+ @media (max-width: 600px) {
+      .fancy-btn {
+        font-size: 16px;
+        padding: 10px 24px;
+      }
+
   </style>
 </head>
 <body style="background-color: rgb(238, 238, 238);">
