--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE HTML>
 <html>
 <head> 
-<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> AARON </title>
 
+ <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mobile Friendly Test</title>
   <style>
-      img {
-      max-width: 100%;
-      height: auto;
+    * {
+      box-sizing: border-box;
     }
 
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      background: #f0f0f0;
+      text-align: center;
+    }
+
+    img {
+      max-width: 90%;
+      height: auto;
+      margin-bottom: 20px;
+    }
     .bottom-left {
       position: fixed;
       bottom: 10px;
@@ -57,6 +74,7 @@
         font-size: 16px;
         padding: 10px 24px;
       }
+    }
 
   </style>
 </head>
