--- a/index.html
+++ b/index.html
@@ -1,75 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AARON</title>
+<!DOCTYPE HTML>
+<html>
+<head> 
+
+<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>  ENGUERRA, AARON C.</title>
+  
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: rgb(238, 238, 238);
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      min-height: 100vh;
-      padding: 20px;
-    }
-
-    .quote {
-      font-style: italic;
-      color: purple;
-      margin-top: 20px;
-      margin-bottom: 30px;
-      font-size: 1.2rem;
-    }
-
-    img {
-      max-width: 90%;
-      height: auto;
-      border-radius: 8px;
-      margin-bottom: 20px;
-    }
-
-    .fancy-btn {
-      background: linear-gradient(90deg, purple 0%, purple);
-      color: rgb(0, 0, 0);
-      border: none;
-      border-radius: 25px;
-      padding: 12px 32px;
-      font-size: 18px;
-      font-style: italic;
-      font-weight: bold;
-      box-shadow: 0 4px 12px rgba(140, 82, 255, 0.2);
-      cursor: pointer;
-      transition: background 0.3s, transform 0.2s, box-shadow 0.2s;
-    }
-
-    .fancy-btn:hover {
-      background: linear-gradient(90deg, #8ec5fc 0%, #e0c3fc 100%);
-      transform: translateY(4px) scale(0.97);
-    }
-
-    .fancy-btn:active {
-      transform: translateY(6px) scale(0.93);
-      box-shadow: 0 1px 2px rgba(140, 82, 255, 0.10);
-    }
-
     .bottom-left {
       position: fixed;
       bottom: 10px;
       left: 10px;
-      font-size: 16px;
+      font-size: 18px;
       color: purple;
       text-decoration: none;
-    }
-
+    } 
     .bottom-right {
       position: fixed;
       bottom: 10px;
@@ -79,27 +24,64 @@
       color: purple;
     }
 
-    @media (max-width: 600px) {
-      .fancy-btn {
-        font-size: 16px;
-        padding: 10px 24px;
-      }
-      .quote {
-        font-size: 1rem;
-      }
-    }
+  .fancy-btn {
+    background: linear-gradient(90deg, purple 0%, purple);
+    color: rgb(0, 0, 0);
+    border: none;
+    border-radius: 25px;
+    padding: 12px 32px;
+    font-size: 18px;
+    font-style: italic;
+    font-weight: bold;
+    box-shadow: 0 4px 12px rgba(140, 82, 255, 0.2);
+    cursor: pointer;
+    transition: background 0.3s, transform 0.2s, box-shadow 0.2s;
+  }
+  .fancy-btn:hover {
+   background: linear-gradient(90deg, #8ec5fc 0%, #e0c3fc 100%);
+  transform: translateY(4px) scale(0.97);
+  font-size: 14px;
+  }
+ .fancy-btn:active {
+  transform: translateY(6px) scale(0.93);
+  font-size: 12px;
+  box-shadow: 0 1px 2px rgba(140, 82, 255, 0.10);
+}
+</style>
+  
+    
   </style>
 </head>
-<body>
+<body style="background-color: rgb(238, 238, 238);">
+  <div id="header"></div>
+  <hr>
+  <br>
+  <br>
+  <p style="text-align: center; font-style:italic; color: purple;">
+    "MALAKAS ANG BIKE HINDI MAKAPAG BAGYO"
+  </p>
+   
+     <br>
+     <br> 
+     <br> 
+     
+    <img src="meme.jpg" alt="My photo" width="300" style="display: block; margin: auto;">
+ 
 
-  <p class="quote">"MALAKAS ANG BIKE HINDI MAKAPAG BAGYO"</p>
+  
+  <br>
+  <div style="text-align: center;">
+    <a href="https://www.facebook.com/aaron.enguerra.5/" target="_blank">
+      <button class="fancy-btn">Click mo ito para hindi ka na malungkot.</button>
+    </a>
+    </div>
+  
+  <a href="https://www.facebook.com/aaron.enguerra.5/" class="bottom-left">Araykobes.com</a>
+  
+  <p class="bottom-right">CREATED BY AARON</p>
 
-  <img src="meme.jpg" alt="Photo" />
-
-  <a href="https://www.facebook.com/aaron.enguerra.5/" target="_blank">
-    <button class="fancy-btn">Click mo ito para hindi ka na malungkot.</button>
-  </a>
-
+</body>
+</html>
   <a href="https://www.facebook.com/aaron.enguerra.5/" class="bottom-left">Araykobes.com</a>
   <p class="bottom-right">CREATED BY AARON</p>
 
